feat(chat): implement chat widget and message components
- Added ChatMessage component for displaying individual messages.
- Introduced ChatWidget component for managing chat interactions.
- Implemented TypingIndicator for showing when the assistant is typing.
- Integrated Supabase for chat message handling and contact form submissions.
- Created environment type definitions for Supabase configuration.
- Added Supabase client setup for database interactions.
- Defined database types for better type safety.
- Enhanced Contact page to handle form submissions with email notifications.
- Created Supabase functions for handling chat and email notifications.
- Set up database migrations for contact submissions and newsletter subscriptions.
- Updated TypeScript configurations to include new files and settings.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,5 +26,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "src/custom.d.ts"]
+  "include": ["src", "src/custom.d.ts", "src/env.d.ts"]
 }
