--- a/supabase/functions/chat-faq/tsconfig.json
+++ b/supabase/functions/chat-faq/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
     "allowJs": true,
     "strict": true,
     "noImplicitAny": true,
